--- a/DogHouse.Application/DogHouse.Application.csproj
+++ b/DogHouse.Application/DogHouse.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DogHouse.Domain\DogHouse.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
