--- a/DogHouse.Infrastructure/DogHouse.Infrastructure.csproj
+++ b/DogHouse.Infrastructure/DogHouse.Infrastructure.csproj
@@ -11,4 +11,13 @@
       <ProjectReference Include="..\DogHouse.Domain\DogHouse.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
