Add connection strings and configured Program.cs

--- a/DogHouse.Api/appsettings.Development.json
+++ b/DogHouse.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\local;Database=Dogs;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
