--- a/Dogshouseservice.Application/Dogshouseservice.Application.csproj
+++ b/Dogshouseservice.Application/Dogshouseservice.Application.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>DogHouse.Application</RootNamespace>
+        <RootNamespace>Dogshouseservice.Application</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
