Add unit tests for DogRepository, DogService and DogsController

--- a/Dogshouseservice.Tests/Dogshouseservice.Tests.csproj
+++ b/Dogshouseservice.Tests/Dogshouseservice.Tests.csproj
@@ -11,14 +11,25 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="FluentAssertions" Version="8.8.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="NUnit" Version="3.14.0"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.9.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
+        <PackageReference Include="xunit" Version="2.9.3" />
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="NUnit.Framework"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Dogshouseservice.Api\Dogshouseservice.Api.csproj" />
+      <ProjectReference Include="..\Dogshouseservice.Application\Dogshouseservice.Application.csproj" />
+      <ProjectReference Include="..\Dogshouseservice.Domain\Dogshouseservice.Domain.csproj" />
+      <ProjectReference Include="..\Dogshouseservice.Infrastructure\Dogshouseservice.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
